/**
 * Mock API Client â€” simulates gRPC metadata injection & network latency.
 * Every request auto-attaches the JWT token from the caller.
 */
import type {
  LoginRequest,
  SignupRequest,
  UserProfile,
  QuizQuestion,
  QuizSubmitRequest,
  QuizSubmitResponse,
  QuizStats,
  CommunityFeed,
  DeepfakeReport,
  AnalysisLogEntry,
  DashboardAggregated,
  CheckoutRequest,
  CheckoutResponse,
  SubscriptionPlan,
} from "./types";

// --------------- helpers ---------------

const delay = (min = 500, max = 1500) =>
  new Promise<void>((r) => setTimeout(r, min + Math.random() * (max - min)));

const fakeJwt = (payload: Record<string, unknown>) => {
  const header = btoa(JSON.stringify({ alg: "HS256", typ: "JWT" }));
  const body = btoa(unescape(encodeURIComponent(JSON.stringify(payload))));
  const sig = btoa("mock-signature");
  return `${header}.${body}.${sig}`;
};

const uuid = () => crypto.randomUUID();

/** Simulates attaching gRPC metadata (authorization header) */
const withAuth = (token: string | null) => {
  if (!token) throw new Error("UNAUTHENTICATED: No token provided");
  return { authorization: `Bearer ${token}`, "x-request-id": uuid() };
};

// --------------- Mock data ---------------

const MOCK_USER: UserProfile = {
  id: "usr_fox_001",
  email: "detective@deepfind.io",
  nickname: "ë‚ ìŒ˜ ì—¬ìš° íƒì •",
  avatarEmoji: "ğŸ¦Š",
  subscriptionType: "free",
  coins: 1200,
  level: 5,
  levelTitle: "ì „ë¬¸ê°€",
  xp: 3400,
  createdAt: "2025-09-15T00:00:00Z",
};

const MOCK_QUIZ_QUESTIONS: QuizQuestion[] = [
  {
    id: "q1",
    videoUrl: "",
    thumbnailEmoji: "ğŸ¬",
    options: ["ì… ëª¨ì–‘ì´ ì–´ìƒ‰í•´ìš”", "ëˆˆ ê¹œë¹¡ì„ì´ ì—†ì–´ìš”", "ë¨¸ë¦¬ì¹´ë½ì´ í”ë“¤ë ¤ìš”", "ëª©ì†Œë¦¬ê°€ ë‹¬ë¼ìš”"],
    correctIndex: 1,
    explanation: "ë”¥í˜ì´í¬ ì˜ìƒì—ì„œëŠ” ëˆˆ ê¹œë¹¡ì„ì´ ë¶€ìì—°ìŠ¤ëŸ¬ìš´ ê²½ìš°ê°€ ë§ì•„ìš”!",
    difficulty: "easy",
  },
  {
    id: "q2",
    videoUrl: "",
    thumbnailEmoji: "ğŸ¥",
    options: ["ë°°ê²½ì´ ìì—°ìŠ¤ëŸ¬ì›Œìš”", "ì–¼êµ´ ê²½ê³„ê°€ ë²ˆì ¸ìš”", "ìŒì„±ì´ ì •í™•í•´ìš”", "ì¡°ëª…ì´ ì¼ì¹˜í•´ìš”"],
    correctIndex: 1,
    explanation: "ì–¼êµ´ í•©ì„± ê²½ê³„ ë¶€ë¶„ì´ ë²ˆì§€ê±°ë‚˜ íë¦¿í•œ ê±´ ë”¥í˜ì´í¬ì˜ ëŒ€í‘œ íŠ¹ì§•ì´ì—ìš”!",
    difficulty: "medium",
  },
];

const MOCK_COMMUNITY_POSTS = [
  { id: "p1", authorNickname: "ê¼¬ë§ˆ íƒì •", authorEmoji: "ğŸ±", title: "ë”¥í˜ì´í¬ ì°¾ëŠ” ê¿€íŒ ê³µìœ !", body: "ëˆˆ ê¹œë¹¡ì„ì„ ì˜ ë³´ì„¸ìš”...", likes: 42, comments: 7, createdAt: "2026-02-20T10:00:00Z", tags: ["íŒ", "ì´ˆë³´"] },
  { id: "p2", authorNickname: "ìˆ˜ë¦¬ ë¶€ì—‰ì´", authorEmoji: "ğŸ¦‰", title: "ë ˆë²¨ 10 ë‹¬ì„± í›„ê¸°", body: "ë“œë””ì–´ ë§ˆìŠ¤í„° íƒì •ì´ ë˜ì—ˆì–´ìš”!", likes: 128, comments: 23, createdAt: "2026-02-22T15:30:00Z", tags: ["í›„ê¸°", "ë ˆë²¨ì—…"] },
  { id: "p3", authorNickname: "ìš©ê°í•œ ê³°", authorEmoji: "ğŸ»", title: "ì´ ì˜ìƒ ì§„ì§œì¸ê°€ìš”?", body: "ì¹œêµ¬ê°€ ë³´ë‚´ì¤€ ì˜ìƒì¸ë° ì¢€ ì´ìƒí•´ìš”...", likes: 15, comments: 5, createdAt: "2026-02-24T09:00:00Z", tags: ["ì§ˆë¬¸"] },
];

const MOCK_PLANS: SubscriptionPlan[] = [
  { id: "monthly", name: "ì›”ê°„ í”„ë¦¬ë¯¸ì—„", price: 4900, currency: "KRW", features: ["ë¬´ì œí•œ ë¶„ì„", "ê´‘ê³  ì œê±°", "í”„ë¦¬ë¯¸ì—„ ë±ƒì§€", "ìš°ì„  ë¶„ì„ í"] },
  { id: "yearly", name: "ì—°ê°„ í”„ë¦¬ë¯¸ì—„", price: 39000, currency: "KRW", features: ["ë¬´ì œí•œ ë¶„ì„", "ê´‘ê³  ì œê±°", "í”„ë¦¬ë¯¸ì—„ ë±ƒì§€", "ìš°ì„  ë¶„ì„ í", "ë³´ë„ˆìŠ¤ ì½”ì¸ 500ë‹¢"] },
];

// --------------- Auth Service ---------------

export async function mockLogin(req: LoginRequest): Promise<{ token: string; user: UserProfile }> {
  await delay(600, 1000);
  if (req.email && req.password) {
    const user = { ...MOCK_USER, email: req.email };
    const token = fakeJwt({ sub: user.id, email: user.email, nickname: user.nickname, avatarEmoji: user.avatarEmoji, role: user.subscriptionType, iat: Date.now(), exp: Date.now() + 3600000 });
    return { token, user };
  }
  throw new Error("INVALID_CREDENTIALS");
}

export async function mockSignup(req: SignupRequest): Promise<{ token: string; user: UserProfile }> {
  await delay(800, 1200);
  const user: UserProfile = { ...MOCK_USER, id: uuid(), email: req.email, nickname: req.nickname, avatarEmoji: req.avatarEmoji, coins: 100, level: 1, levelTitle: "ìƒˆì‹¹ íƒì •", xp: 0 };
  const token = fakeJwt({ sub: user.id, email: user.email, nickname: user.nickname, avatarEmoji: user.avatarEmoji, role: "free", iat: Date.now(), exp: Date.now() + 3600000 });
  return { token, user };
}

// --------------- Dashboard BFF ---------------

export async function fetchDashboardData(token: string): Promise<DashboardAggregated> {
  withAuth(token);
  // BFF pattern: parallel fetch from User, Quiz, Community
  const [user, quizStats, feed] = await Promise.all([
    fetchUserProfile(token),
    fetchQuizStats(token),
    fetchCommunityFeed(token),
  ]);
  await delay(200, 400); // aggregation overhead
  return {
    user,
    quizStats,
    recentPosts: feed.posts.slice(0, 3),
    dailyChallenge: { title: "ê°€ì§œ ì˜ìƒ 3ë²ˆ ì°¾ê¸°", progress: 1, total: 3, reward: 50 },
  };
}

// --------------- User Service ---------------

export async function fetchUserProfile(token: string): Promise<UserProfile> {
  withAuth(token);
  await delay(300, 600);
  return { ...MOCK_USER };
}

// --------------- Quiz Service ---------------

export async function fetchQuizQuestion(token: string): Promise<QuizQuestion> {
  withAuth(token);
  await delay(500, 800);
  return MOCK_QUIZ_QUESTIONS[Math.floor(Math.random() * MOCK_QUIZ_QUESTIONS.length)];
}

export async function submitQuizAnswer(token: string, req: QuizSubmitRequest): Promise<QuizSubmitResponse> {
  withAuth(token);
  await delay(400, 700);
  const q = MOCK_QUIZ_QUESTIONS.find((q) => q.id === req.questionId);
  const correct = q ? req.selectedIndex === q.correctIndex : false;
  return {
    correct,
    xpEarned: correct ? 100 : 10,
    coinsEarned: correct ? 25 : 0,
    explanation: q?.explanation ?? "",
    streakCount: correct ? 3 : 0,
  };
}

export async function fetchQuizStats(token: string): Promise<QuizStats> {
  withAuth(token);
  await delay(300, 500);
  return { totalAnswered: 47, correctRate: 0.78, currentStreak: 3, bestStreak: 12, lives: 2 };
}

// --------------- Community Service ---------------

export async function fetchCommunityFeed(token: string, page = 1): Promise<CommunityFeed> {
  withAuth(token);
  await delay(500, 900);
  return { posts: MOCK_COMMUNITY_POSTS, totalCount: MOCK_COMMUNITY_POSTS.length, page };
}

// --------------- Video Analysis (MCP + SageMaker) ---------------

export type AnalysisEventCallback = (log: AnalysisLogEntry) => void;

export async function runVideoAnalysis(
  token: string,
  _file: File | string,
  onEvent: AnalysisEventCallback
): Promise<DeepfakeReport> {
  withAuth(token);

  const log = (message: string, type: AnalysisLogEntry["type"] = "info") =>
    onEvent({ timestamp: new Date().toISOString(), message, type });

  // Stage: UPLOADING
  log("ğŸ“¤ ì˜ìƒ íŒŒì¼ ì—…ë¡œë“œ ì‹œì‘...");
  await delay(800, 1200);
  log("âœ… ì—…ë¡œë“œ ì™„ë£Œ (32.4 MB)", "success");

  // Stage: MCP_CONNECTING
  log("ğŸ”Œ MCP Routerì— ì—°ê²° ì¤‘...");
  await delay(600, 1000);
  log("ğŸ”— MCP Session ìˆ˜ë¦½ ì™„ë£Œ (session_id: mcp_" + uuid().slice(0, 8) + ")", "success");
  log("ğŸ“¡ SageMaker ì¶”ë¡  ì—”ë“œí¬ì¸íŠ¸ë¡œ í˜ì´ë¡œë“œ ë¼ìš°íŒ…...");
  await delay(400, 800);

  // Stage: SAGEMAKER_PROCESSING
  log("ğŸ§  SageMaker ì¶”ë¡  ì‹œì‘ (model: deepfind-v3.2-fp16)");
  await delay(500, 700);
  log("ğŸ” í”„ë ˆì„ ìƒ˜í”Œë§ ì¤‘... (ì´ 240 í”„ë ˆì„)");
  await delay(600, 900);
  log("ğŸ”¬ ì–¼êµ´ ì˜ì—­ íƒì§€ ë° íŠ¹ì§• ì¶”ì¶œ...");
  await delay(700, 1100);
  log("ğŸ“Š ì¡°ì‘ í”ì  ë¶„ì„ ì¤‘...");
  await delay(500, 800);
  log("âš¡ GAN ì•„í‹°íŒ©íŠ¸ ìŠ¤ìºë‹...");
  await delay(400, 600);
  log("âœ… ë¶„ì„ ì™„ë£Œ!", "success");

  // Stage: COMPLETED
  return {
    taskId: "task_" + uuid().slice(0, 8),
    verdict: "fake",
    confidenceScore: 94.7,
    manipulatedRegions: [
      { label: "ì–¼êµ´ ì˜ì—­ (ì… ì£¼ë³€)", confidence: 96.2 },
      { label: "ëˆˆ ê¹œë¹¡ì„ íŒ¨í„´", confidence: 91.3 },
      { label: "í”¼ë¶€ í…ìŠ¤ì²˜ ë¶ˆì¼ì¹˜", confidence: 88.8 },
    ],
    frameSamplesAnalyzed: 240,
    modelVersion: "deepfind-v3.2-fp16",
    processingTimeMs: 4832,
  };
}

// --------------- Payment Service ---------------

export function getSubscriptionPlans(): SubscriptionPlan[] {
  return MOCK_PLANS;
}

export async function mockCheckout(token: string, req: CheckoutRequest): Promise<CheckoutResponse> {
  withAuth(token);
  await delay(1000, 1500);
  return {
    success: true,
    transactionId: "txn_" + uuid().slice(0, 8),
    newSubscriptionType: "premium",
    expiresAt: new Date(Date.now() + (req.planId === "yearly" ? 365 : 30) * 86400000).toISOString(),
  };
}
